# llama-index-RAG

./: .env  .gitignore  README.md  llamaParse.ipynb  pyproject.toml
scripts/: persistent-storage.ipynb  simple-implementation.ipynb
storage/: index_store.json
